# valcomp

./: .dockerignore  .easignore  .env.example  .gitignore  Dockerfile  PROJECT_GUIDE.md  README.md  fly.toml  pyproject.toml  run-companion.ps1  run.ps1
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src/: main.js  preload.js
apps/desktop/test/: riot-live-bridge.test.js
apps/mobile/: .easignore  .env.example  .gitignore  README.md  app.json  eas.json  firebase.json  package-lock.json  package.json  pubspec.yaml
ares_backend/: __init__.py  app.py  assets.py  auth.py  capabilities.py  companion.py  diagnostics.py  errors.py  live.py  live_store.py  notifications.py  player.py  repository.py  riot.py  schemas.py  security.py  settings.py  store.py
ares_console/: __init__.py  app.py  bridge.py  catalog.py  diagnostics.py  executor.py  models.py  session.py  streams.py
ares_console/resources/: endpoints.json
docs/: .nojekyll  index.html  scripts.js  styles.css
docs/downloads/: manifest.json
supabase/: schema.sql
tests/: test_backend_api.py  test_backend_capabilities.py  test_backend_live.py  test_backend_player.py  test_backend_repository.py  test_backend_security.py  test_backend_store.py  test_catalog.py  test_diagnostics.py  test_executor.py  test_session.py
tools/: apply_supabase_schema.ps1  build_companion_windows.ps1  export_catalog.mjs  fly_set_private_secrets.ps1  publish_github_pages.ps1  pull_diagnostics.ps1  update_download_manifest.ps1  windows_version_info.txt
valcomp_companion/: __init__.py  app.py
(+75 files in other folders)
