[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ares-console"
version = "0.1.0"
description = "Modern desktop explorer for the unofficial Valorant client APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31,<1",
    "cryptography>=42,<46",
    "fastapi>=0.115,<1",
    "httpx>=0.28.1,<0.29",
    "pydantic-settings>=2.6,<3",
    "PyJWT>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.32,<1",
    "websockets>=16,<17",
]

[project.optional-dependencies]
desktop = [
    "PySide6>=6.11.1,<6.12",
    "pyinstaller>=6.16,<7",
]
dev = [
    "PySide6>=6.11.1,<6.12",
    "pyinstaller>=6.16,<7",
    "pytest>=9,<10",
]

[project.scripts]
ares-console = "ares_console.app:main"
ares-diagnostics = "ares_console.diagnostics:main"
ares-api = "ares_backend.app:main"
ares-companion = "ares_backend.companion:main"
valcomp-companion = "valcomp_companion.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ares_console*", "ares_backend*", "valcomp_companion*"]

[tool.setuptools.package-data]
ares_console = [
    "resources/*.json",
    "resources/qml/*.qml",
    "resources/qml/components/*.qml",
    "resources/icons/*.svg",
]
valcomp_companion = [
    "assets/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
